Fixes CSS and responsive layout bugs

--- a/css/front.css
+++ b/css/front.css
@@ -302,7 +302,7 @@ nav ul ul li {
 	display:list-item;
 	position: relative;
 }
-@media screen and (min-width:768pxpx) {
+@media screen and (min-width:768px) {
 	nav ul ul li {
 		left:-170px;
 	}
